--- a/register.html
+++ b/register.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Register</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="css/util.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <form action="action_page.php">
   <div class="container">
-    <h1>Register</h1>
+    <h1>ClapAway | Register</h1>
     <p>Please fill in this form to create an account.</p>
     <hr>
 
-    <label for="email"><b>Email</b></label>
+    <label for="name"><b>Name</b></label>
+    <input type="text" placeholder="Enter Name" name="name" required>
+
+    <label for="email"><b>Email ID</b></label>
     <input type="text" placeholder="Enter Email" name="email" required>
 
     <label for="psw"><b>Password</b></label>
@@ -19,6 +23,10 @@
 
     <label for="psw-repeat"><b>Repeat Password</b></label>
     <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
+    <label for="mobno"><b>Mobile Number</b></label>
+    <input type="text" placeholder="Enter Mobile Number" name="mobno" required>
+
     <hr>
 
 <!--     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
@@ -26,8 +34,10 @@
   </div>
 
   <div class="container signin">
-    <p>Already have an account? <a href="#">Sign in</a>.</p>
+    <p>Already have an account? <a href="login.html">Sign in</a>.</p>
   </div>
+
 </form>
+<script src="script3.js"></script>
 </body>
 </html>
